--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.13.0",
         "@reduxjs/toolkit": "^1.9.3",
-        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.3.2",
         "jest-react-reporter": "^4.0.0",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
-        "react-scripts": "^5.0.1",
-        "styled-components": "^5.3.10",
-        "stylelint": "^15.6.0",
-        "stylelint-prettier": "^2.0.0",
+        "react-scripts": "5.0.1",
+        "styled-components": "^5.3.6",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -45,14 +47,19 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
-        "eslint": "^8.39.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "eslint": "^8.32.0",
+        "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.32.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "prettier": "2.8.8"
+        "eslint-plugin-react": "^7.32.1",
+        "msw": "^1.1.0",
+        "prettier": "2.8.3",
+        "stylelint": "^14.16.1",
+        "stylelint-config-prettier": "^9.0.4",
+        "stylelint-config-prettier-scss": "^0.0.1",
+        "stylelint-config-standard-scss": "^6.1.0",
+        "stylelint-config-styled-components": "^0.1.1",
+        "stylelint-prettier": "^2.0.0",
+        "stylelint-processor-styled-components": "^1.10.0"
     }
 }
